...
                android:layout_marginEnd="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_forgot_password_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_forgot_password_send_email"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@{viewModel.isSendTempPasswordEnable ? @drawable/bg_primary_rounded : @drawable/bg_grey_rounded}"
...
