...
    <string name="sports" translatable="false">운동기구</string>
    <string name="necessity" translatable="false">생필품</string>
    <string name="device" translatable="false">전자기기</string>
    <string name="cloth" translatable="false">의류</string>

    <string name="fail_login">이메일 또는 비밀번호가 틀렸습니다</string>
    <string name="fail_invalid_email">유효하지 않은 이메일입니다</string>
    <string name="fail_diff_password">비밀번호가 일치하지 않습니다</string>
    <string name="fail_sign_up">회원가입에 실패했습니다</string>
    <string name="fail_existent_email">이미 존재하는 이메일입니다</string>
    <string name="fail_existent_nick">이미 존재하는 닉네임입니다</string>
    <string name="fail_send_email">이메일 전송에 실패했습니다</string>
    <string name="fail_confirm_code">인증코드를 확인할 수 없습니다</string>
    <string name="fail_invalid_confirm_code">인증코드가 유효하지 않습니다</string>
    <string name="fail_server_error">네트워크 상태를 확인해주세요</string>
    <string name="fail_change_password">비밀번호를 변경하지 못했습니다</string>
    <string name="fail_permission_denied">권한이 필요합니다</string>
    <string name="fail_non_exist_post">존재하지 않는 글입니다</string>
    <string name="fail_unauthorized">재로그인이 필요합니다</string>
    <string name="fail_join_chat_room">채팅방에 접속하지 못했습니다</string>

...
