<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.dsm.dsmmarketandroid.presentation.ui.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.auth.login.LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_login"
            style="@style/ToolBarStyle.Event"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhiteBlack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="back"
            app:navigationIcon="@drawable/ic_back_black"
            app:title="@string/login"
            app:titleTextColor="@color/colorBlackWhite" />

        <View
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:background="@drawable/bg_gradient_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_login" />

        <ImageView
            android:id="@+id/iv_start_logo"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/common_logo"
            android:transitionName="logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/bg_white_rounded"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_start_logo">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress"
                    android:nextFocusDown="@id/et_login_password"
                    android:singleLine="true"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                app:layout_constraintLeft_toLeftOf="@id/til_login_email"
                app:layout_constraintRight_toRightOf="@id/til_login_email"
                app:layout_constraintTop_toBottomOf="@id/til_login_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/forget_password"
                android:textColor="@color/colorGrey"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="@id/til_login_password"
                app:layout_constraintTop_toBottomOf="@id/til_login_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@{viewModel.isLoginEnable ? @drawable/bg_primary_rounded : @drawable/bg_grey_rounded}"
                android:clickable="@{viewModel.isLoginEnable}"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login_forget_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>